<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".view.DetailWriterFragment">

    <!--1-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout_detail_writter_fragment_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!--1_1-->
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/circleImageView_detail_writter_fragment_1_1"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="50dp"
            app:civ_border_color="@color/divider"
            app:civ_border_width="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!--1_2-->
        <TextView
            android:id="@+id/textView_detail_writer_fragment_1_2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="10dp"
            android:lines="1"
            android:text="@string/a16"
            android:textSize="8pt"
            app:layout_constraintEnd_toStartOf="@+id/textView_detail_writer_fragment_1_3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/circleImageView_detail_writter_fragment_1_1" />

        <!--1_3-->
        <TextView
            android:id="@+id/textView_detail_writer_fragment_1_3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="10dp"
            android:gravity="end"
            android:lines="1"
            android:text="@string/a7"
            android:textSize="8pt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView_detail_writer_fragment_1_2"
            app:layout_constraintTop_toBottomOf="@+id/circleImageView_detail_writter_fragment_1_1" />

        <!--1_4-->
        <TextView
            android:id="@+id/textView_detail_writer_fragment_1_4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:lines="1"
            android:text="@string/a17"
            android:textSize="8pt"
            app:layout_constraintEnd_toStartOf="@+id/textView_detail_writer_fragment_1_5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_detail_writer_fragment_1_2" />

        <!--1_5-->
        <TextView
            android:id="@+id/textView_detail_writer_fragment_1_5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:gravity="end"
            android:lines="1"
            android:text="@string/a18"
            android:textSize="8pt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView_detail_writer_fragment_1_4"
            app:layout_constraintTop_toBottomOf="@+id/textView_detail_writer_fragment_1_3" />

        <!--1_6-->
        <TextView
            android:id="@+id/textView_detail_writer_fragment_1_6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:lines="1"
            android:text="@string/a19"
            android:textSize="8pt"
            app:layout_constraintEnd_toStartOf="@+id/textView_detail_writer_fragment_1_7"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_detail_writer_fragment_1_4" />

        <!--1_7-->
        <TextView
            android:id="@+id/textView_detail_writer_fragment_1_7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:gravity="end"
            android:lines="1"
            android:text="@string/a20"
            android:textSize="8pt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView_detail_writer_fragment_1_6"
            app:layout_constraintTop_toBottomOf="@+id/textView_detail_writer_fragment_1_5" />

        <!--1_8-->
        <TextView
            android:id="@+id/textView_detail_writer_fragment_1_8"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:lines="1"
            android:text="@string/a21"
            android:textSize="8pt"
            app:layout_constraintEnd_toStartOf="@+id/textView_detail_writer_fragment_1_9"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_detail_writer_fragment_1_6" />

        <!--1_9-->
        <TextView
            android:id="@+id/textView_detail_writer_fragment_1_9"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:gravity="end"
            android:lines="1"
            android:text="@string/a22"
            android:textSize="8pt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView_detail_writer_fragment_1_8"
            app:layout_constraintTop_toBottomOf="@+id/textView_detail_writer_fragment_1_7" />

        <!--1_10-->
        <TextView
            android:id="@+id/textView_detail_writer_fragment_1_10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/a23"
            android:textSize="9pt"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_detail_writer_fragment_1_9" />

        <!--1_11-->
        <com.codesgood.views.JustifiedTextView
            android:id="@+id/justifiedTextView_detail_writer_fragment_1_11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/a14"
            android:textSize="8pt"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_detail_writer_fragment_1_10" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>